# personal-ai

./: .gitignore  README.md  python create_structure.py
personal-ai/: main.py  (+1 more)
personal-ai/personal-chatbot-voice/: docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
personal-ai/personal-chatbot-voice/config/: __init__.py  audio_config.yaml  config_loaders.py  embeddings.yaml  llm_config.yaml  settings.py  voice_config.yaml  wake_word_config.yaml
personal-ai/personal-chatbot-voice/config/personas/: default_voice.yaml  friendly_voice.yaml  professional_voice.yaml
personal-ai/personal-chatbot-voice/docker/: .env.example  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  init-db.sql  nginx.conf  prometheus.yml  statrt-dev.sh  wait-for-it.sh
personal-ai/personal-chatbot-voice/docs/: architecture.md
personal-ai/personal-chatbot-voice/scripts/: benchmark.py  clone_voice.py  import_knowledge.py  setup_environment.sh  setup_windows.ps1  train_wake_word.py
personal-ai/personal-chatbot-voice/src/: __init__.py  cli.py
personal-ai/personal-chatbot-voice/src/audio/capture/: microphone.py
personal-ai/personal-chatbot-voice/src/audio/processing/: vad.py
personal-ai/personal-chatbot-voice/src/core/: conversation_manager.py  voice_engine.py
personal-ai/personal-chatbot-voice/src/interface/: voice_interface.py
personal-ai/personal-chatbot-voice/src/llm/: providers.py  voice_optimized_llm.py
personal-ai/personal-chatbot-voice/src/memory/: vector_store.py
personal-ai/personal-chatbot-voice/src/utils/: audio_utils.py  config_loader.py  logging_config.py  performance_monitor.py
personal-ai/personal-chatbot-voice/tests/: __init__.py
personal-ai/personal-chatbot-voice/tests/integration/: test_skills.py
personal-ai/personal-chatbot-voice/tests/performance/: test_accuracy.py  test_latency.py
personal-ai/personal-chatbot-voice/tests/unit/: test_audio_processing.py  test_llm_integration.py  test_stt.py  test_tts.py
(+7 files in other folders)
